--- a/css/basic.css
+++ b/css/basic.css
@@ -9,7 +9,7 @@ body{
 
      background-image:url('pics/coffey.jpg');
      background-repeat:no-repeat;
-     border:1px solid;
+     border:1px solid #A7A4A9;
 }
 #topbar{
     background-color:#51473D;
@@ -25,7 +25,7 @@ body{
 /* Menyn anpassas får färg samt ändrar så att varje bokstav får stor bokstav */
 #menu{
     margin-top:183px;
-    height:30px;
+    height:40px;
     background-color:#51473D;
     width:600px;
     float:left;
@@ -70,24 +70,29 @@ body{
 }
 
 #maincontent{
-	height:370px;
-    width:365px;
+	height:375px;
+    width:355px;
     float:left;
 	background:#EAE7D2;
 	font-size:16px;
     letter-spacing:1px;
     font-family:Times;
-    
+    padding-left:10px;
+}
+/*Ställer in bilden så att texten kan lägga sin direkt under samt skapar mellanrum till höger*/
+#maincontent img{
+    margin:0;
+    padding-right:5px;
 }
 #maincontent h1{
     font-size:30px;
     font-family:Times;
     font-weight:normal;
-    padding-left:10px;
     padding-top:10px;
+    
 }
 #subcontent{
-    height:370px;
+    height:375px;
     width:227px;
     float:right;
     background-color:#EAE7D2;
@@ -95,25 +100,40 @@ body{
     border-left: 3px dotted #CCC;
     line-height:20px;
     font-family:Verdana;
-    
 }
 /* <p> Taggen får padding */
 #subcontent p{
     padding-left:5px;
+    padding-top:15px;
+    padding-bottom:20px;
 }
 /* Ser till att Ul listan i subcontent släpper list attributet */
 #subcontent ul{
        display:inline;
+       font-size:12px;
 }
 #subcontent li{
     padding-left:5px;
 }
 #subcontent h1{
-    font-size:13px;
+    font-size:14px;
     padding-left:5px;
     padding-top:20px;
     font-family:Times;
-}  
+}
+
+#subcontent a:link{
+    color:black;
+}
+#subcontent a:visited{
+    color:black;
+}
+#subcontent a:hover{
+    color:gray;
+}
+#subcontent a:active{
+    color:yellow;
+}
 h2{
     font-family:Verdana;
     font-size:13px;
@@ -129,6 +149,8 @@ h2{
 	font-style:oblique;
 	text-align:left;
 	font-size:0px;
+	padding-bottom:15px;
+	padding-left:10px;
 }
 /*Lägger in egen text och förstorar upp den igen */
 #bottomcontent:after{
