--- a/css/basic.css
+++ b/css/basic.css
@@ -2,6 +2,7 @@
 body{
     	Font-family: Verdana,Times, Ariel, sans-serif;
     	color:#797066;
+    	border:10px solid white;
 }
 #container{
     height:642px;
@@ -38,9 +39,7 @@ body{
   border-left: 1px solid black;
   padding-bottom:5px;
   padding-top:5px;
-  
  }
-
 #menu li a {
   text-decoration: none;
   padding-left:15px;
@@ -52,7 +51,8 @@ body{
 /*Byter färg vid hovering och ser till att hela rutan blir klickbar */
 #menu li a:hover, meny li:focus{
     background: #9C9084;
-    padding-bottom:10px;
+    padding-bottom:6px;
+    padding-top:5px;
 }
 
 /* Tar bort anchor länken med exakt href */
@@ -72,7 +72,7 @@ body{
 
 #maincontent{
 	height:370px;
-    width:350px;
+    width:365px;
     float:left;
 	background:#EAE7D2;
 	font-size:16px;
@@ -94,7 +94,7 @@ body{
 }
 #subcontent{
     height:370px;
-    width:220px;
+    width:210px;
     float:right;
     background-color:#EAE7D2;
     font-size:9px;
@@ -166,11 +166,14 @@ img {
 li{
 	list-style:none;
 }
-.active{
+.active a{
     list-style:none;
+    background-color:#EAE7D2;
+    padding-top:5px;
+    padding-bottom:6px;
 }
-a:link {color:#000;} 
-a:visited {color:#EAE7D2;}
+a:link {color:gray;} 
+a:visited {color:gray;}
 a:hover {color:#EAE7D2;}
 a:active {color:#FDB;} 
 
